Update YT_Script .ipynb

--- a/YT_Script .ipynb
+++ b/YT_Script .ipynb
@@ -178,7 +178,7 @@
       "source": [
         "%%writefile app.py\n",
         "import os\n",
-        "apikey='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'\n",
+        "apikey='Your_KEY'\n",
         "os.environ['OPENAI_API_KEY'] = apikey\n",
         "import streamlit as st\n",
         "from langchain.llms import OpenAI\n",
